# SimpleGraphicsEngine

./: .dir-locals.el  .gitignore  LICENSE  SimpleGraphicsEngineQtCreator.files  SimpleGraphicsEngineQtCreator.includes  meson.build  run.sh  test
.github/workflows/: EngineTestActions.yml
src/myexe/: meson.build
src/myexe/src/: AdvencedGLLayer.hpp  AdvencedLighting.hpp  Application.cpp  CubeMapLayer.hpp  ExampleLayer.hpp  HdrLayer.hpp  LightingLayer.hpp  ModelLayer.hpp  NormalMap.hpp  PBR.hpp  PBR_IBL.hpp  PBR_IBL_specular.hpp  PBR_IBL_textured.hpp  Path.hpp  PointLightLayer.hpp  Util.hpp
src/myexe/src/assets/shaders/: background.frag  background.vert  brdf.frag  brdf.vert  cubemap.frag  cubemap.vert  equirectangular_to_cubemap.frag  example.frag  (+24 more)
src/mylib/: fetch_files.sh  meson.build
src/mylib/pch/: pch.hpp
src/mylib/src/: mylib.hpp
src/mylib/src/Core/: Application.cpp  Application.hpp  CameraController.cpp  CameraController.hpp  Core.hpp  EntryPoint.hpp  Input.cpp  Input.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Window.cpp  Window.hpp
src/mylib/src/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
src/mylib/src/Renderer/: CMesh.h  CModel.h  Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  mesh.h  model.h  shader.h
subprojects/glad/: CMakeLists.txt  meson.build  premake5.lua
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
subprojects/stb_image/: CMakeLists.txt  meson.build  stb_image.cpp
